--- a/wip/prepros.cfg
+++ b/wip/prepros.cfg
@@ -143,6 +143,19 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "260b8f07": {
+          "id": "260b8f07",
+          "path": "img/favicon.png",
+          "output": "img/favicon.png",
+          "name": "favicon.png",
+          "category": "IMAGE",
+          "size": 4980,
+          "type": "png",
+          "initialSize": 4980,
+          "optimized": false,
+          "height": 249,
+          "width": 216
         }
       },
       "deploymentHistory": {},
