removed container border on mobile

--- a/wip/prepros.cfg
+++ b/wip/prepros.cfg
@@ -6,7 +6,7 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "simple",
+      "name": "SDM - WIP",
       "path": "",
       "files": {
         "0ffc35d4": {
@@ -102,8 +102,8 @@
           "autoCompile": true,
           "autoprefixer": true,
           "sourceMaps": false,
-          "libSass": false,
-          "nodeSassCompress": true,
+          "libSass": true,
+          "nodeSassCompress": false,
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
