--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "uglify": "mkdirp dist/js -p && uglifyjs src/js/*.js -m -o dist/js/app.js && uglifyjs src/js/*.js -m -c -o dist/js/app.min.js",
     "imagemin": "imagemin src/images/* -o dist/images",
     "icons": "svgo -f src/images/icons -o dist/images/icons && svg-sprite-generate -d dist/images/icons -o dist/images/icons/sprite.svg",
-    "bsync": "browser-sync start --server --index \"dist/index.html\" --files \"dist/css/*.css, dist/js/*.js, dist/*.html, !node_modules/**/*.html\"",
+    "bsync": "browser-sync start --serveStatic \"dist/\" --files \"dist/css/*.css, dist/js/*.js, dist/*.html, !node_modules/**/*.html\"",
     "serve": "serve -p 4444",
     "build:pug": "pug --pretty -o dist/ src/pug/*.pug",
     "build:css": "npm run scss && npm run autoprefixer",
