--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint src/js",
     "uglify": "mkdirp dist/js -p && uglifyjs src/js/*.js -m -o dist/js/app.js && uglifyjs src/js/*.js -m -c -o dist/js/app.min.js",
     "imagemin": "imagemin src/images/* -o dist/images",
-    "icons": "svgo -f src/images/icons -o dist/images/icons && svg-sprite-generate -d dist/images/icons -o dist/images/icons/sprite.svg",
+    "icons": "svgo -f src/images -o dist/images && svg-sprite-generate -d dist/images -o dist/images/sprite.svg",
     "bsync": "browser-sync start --serveStatic \"dist/\" --files \"dist/css/*.css, dist/js/*.js, dist/*.html, !node_modules/**/*.html\"",
     "serve": "serve -p 4444",
     "build:pug": "pug --pretty -o dist/ src/pug/*.pug",
