--- a/package.json
+++ b/package.json
@@ -1,64 +1,59 @@
 {
-  "name": "sdancermichel.me",
-  "version": "1.2.0",
-  "description": "Personal website of Sébastien Dancer-Michel",
-  "author": "Seb Dancer-Michel <s.dancermichel@gmail.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/far0s/sdancermichel.me"
-  },
-  "keywords": [
-    "seb dancer-michel",
-    "personal",
-    "npm scripts",
-    "website",
-    "web",
-    "front-end"
-  ],
-  "scripts": {
-    "clean": "rimraf dist/{*.html,css/*,js/*,images/*}",
-    "autoprefixer": "postcss -u autoprefixer -r dist/css/*",
-    "scss": "node-sass --output-style compressed -o dist/css src/scss",
-    "lint": "eslint src/js",
-    "uglify": "mkdirp dist/js -p && uglifyjs src/js/*.js -m -o dist/js/app.js && uglifyjs src/js/*.js -m -c -o dist/js/app.min.js",
-    "imagemin": "imagemin src/images/* -o dist/images",
-    "icons": "svgo -f src/images -o dist/images && svg-sprite-generate -d dist/images -o dist/images/sprite.svg",
-    "bsync": "browser-sync start --serveStatic \"dist/\" --files \"dist/css/*.css, dist/js/*.js, dist/*.html, !node_modules/**/*.html\"",
-    "serve": "serve -p 4444",
-    "build:pug": "pug --pretty -o dist/ src/pug/*.pug",
-    "build:css": "npm run scss && npm run autoprefixer",
-    "build:js": "npm run lint && npm run uglify",
-    "build:images": "npm run imagemin && npm run icons",
-    "build:all": "npm run build:pug && npm run build:css && npm run build:js && npm run build:images",
-    "watch:pug": "onchange \"src/pug\" -- npm run build:pug",
-    "watch:css": "onchange \"src/scss\" -- npm run build:css",
-    "watch:js": "onchange \"src/js\" -- npm run build:js",
-    "watch:images": "onchange \"src/images\" -- npm run build:images",
-    "watch:all": "npm-run-all -p bsync watch:pug watch:css watch:js watch:images",
-    "postinstall": "npm run build:all && npm run watch:all",
-    "start": "node --harmony-async-await index",
-    "build": "npm run postinstall"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.12.8",
-    "eslint": "^2.10.2",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-plugin-promise": "^1.3.0",
-    "eslint-plugin-standard": "^1.3.2",
-    "imagemin-cli": "^3.0.0",
-    "micro": "latest",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^3.7.0",
-    "npm-run-all": "^2.1.1",
-    "onchange": "^2.4.0",
-    "postcss-cli": "^2.5.2",
-    "pug": "^2.0.0-beta11",
-    "pug-cli": "^1.0.0-alpha6",
-    "rimraf": "^2.5.4",
-    "svg-sprite-generator": "0.0.7",
-    "svgo": "^0.6.6",
-    "uglify-js": "^2.6.2"
-  }
+    "name": "sdancermichel.me",
+    "version": "1.2.0",
+    "description": "Personal website of Sébastien Dancer-Michel",
+    "author": "Seb Dancer-Michel <s.dancermichel@gmail.com>",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/far0s/sdancermichel.me"
+    },
+    "keywords": [
+        "seb dancer-michel",
+        "personal",
+        "npm scripts",
+        "website",
+        "web",
+        "front-end"
+    ],
+    "scripts": {
+        "clean": "rimraf dist/{*.html,css/*,js/*,images/*}",
+        "autoprefixer": "postcss -u autoprefixer -r dist/css/*",
+        "scss": "node-sass --output-style compressed -o dist/css src/scss",
+        "uglify": "mkdirp dist/js -p && uglifyjs src/js/*.js -m -o dist/js/app.js && uglifyjs src/js/*.js -m -c -o dist/js/app.min.js",
+        "imagemin": "imagemin src/images/* -o dist/images",
+        "icons": "svgo -f src/images -o dist/images && svg-sprite-generate -d dist/images -o dist/images/sprite.svg",
+        "bsync": "browser-sync start --serveStatic \"dist/\" --files \"dist/css/*.css, dist/js/*.js, dist/*.html, !node_modules/**/*.html\"",
+        "serve": "serve -p 4444",
+        "build:pug": "pug --pretty -o dist/ src/pug/*.pug",
+        "build:css": "npm run scss && npm run autoprefixer",
+        "build:js": "npm run uglify",
+        "build:images": "npm run imagemin && npm run icons",
+        "build:all": "npm run build:pug && npm run build:css && npm run build:js && npm run build:images",
+        "watch:pug": "onchange \"src/pug\" -- npm run build:pug",
+        "watch:css": "onchange \"src/scss\" -- npm run build:css",
+        "watch:js": "onchange \"src/js\" -- npm run build:js",
+        "watch:images": "onchange \"src/images\" -- npm run build:images",
+        "watch:all": "npm-run-all -p bsync watch:pug watch:css watch:js watch:images",
+        "postinstall": "npm run build:all && npm run watch:all",
+        "start": "node --harmony-async-await index",
+        "build": "npm run postinstall"
+    },
+    "devDependencies": {
+        "autoprefixer": "^6.3.6",
+        "browser-sync": "^2.12.8",
+        "imagemin-cli": "^3.0.0",
+        "micro": "latest",
+        "mkdirp": "^0.5.1",
+        "node-sass": "^3.7.0",
+        "npm-run-all": "^2.1.1",
+        "onchange": "^2.4.0",
+        "postcss-cli": "^2.5.2",
+        "pug": "^2.0.0-beta11",
+        "pug-cli": "^1.0.0-alpha6",
+        "rimraf": "^2.5.4",
+        "svg-sprite-generator": "0.0.7",
+        "svgo": "^0.6.6",
+        "uglify-js": "^2.6.2"
+    }
 }
