😎 Updating professional info

--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
     },
     "now": {
         "name": "sdancermichel.me",
-        "alias": "sdancermichel.now.sh"
+        "alias": "sdancermichel.me"
     }
 }
